# Pomo

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/led_manager/: CMakeLists.txt  led_manager.c
components/led_manager/include/: led_manager.h
components/task_manager/: CMakeLists.txt  task_manager.c
components/task_manager/include/: task_manager.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
components/wifi_manager/src/: package-lock.json  package.json
components/wifi_manager/src/src/: 404.html  config.html  index.html
components/wifi_manager/www/: 404.html  index.html
main/: CMakeLists.txt  Kconfig.projbuild  main.c
www/: 404.html  config.html  index.html  styles.css
